v1.7.3 on 2024-12-29. Update '4-3 contact-form-main' add tabindex='0' on radio and checkout inputs, for issues that these elements not focusable on default on safari.

--- a/4-3 contact-form-main/style.css
+++ b/4-3 contact-form-main/style.css
@@ -7,14 +7,6 @@
     padding: 0;
     font: inherit;
 }
-.visually-hidden {
-    position: absolute;
-    left:     -10000px;
-    top:      auto;
-    width:    1px;
-    height:   1px;
-    overflow: hidden;
-}
 /* defined variables */
 :root {
     /* Colors */
